fix: Fixes styling on dark mode

--- a/demo/app/app.css
+++ b/demo/app/app.css
@@ -7,3 +7,11 @@
 .small {
     font-size: 12;
 }
+
+MarkdownView {
+    background-color: transparent;
+}
+
+.ns-dark MarkdownView {
+    color: white;
+}
